--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -25,6 +25,9 @@
             android:id="@+id/movieName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
             android:layout_margin="@dimen/view_padding"/>
 
         <LinearLayout
