--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,4 +6,10 @@
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/setting"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/contacts"
+        android:icon="@drawable/ic_baseline_contact_phone_24"
+        android:title="@string/contacts"
+        app:showAsAction="ifRoom" />
 </menu>
