--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="layout_padding">16dp</dimen>
     <dimen name="view_padding">8dp</dimen>
     <dimen name="zero">0dp</dimen>
+    <dimen name="main_container_text_size">12sp</dimen>
 </resources>
