--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,4 +12,9 @@
         android:id="@+id/history"
         android:icon="@drawable/ic_baseline_history_24"
         android:title="@string/history" />
+
+    <item
+        android:id="@+id/map"
+        android:icon="@drawable/ic_baseline_map_24"
+        android:title="@string/map" />
 </menu>
