--- a/app/src/main/res/layout/movie_fragment.xml
+++ b/app/src/main/res/layout/movie_fragment.xml
@@ -71,6 +71,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/enterNoteInputLayout"
+            android:layout_margin="@dimen/view_padding"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
